[gd_scene load_steps=2 format=3 uid="uid://dd4jpu5nbnf8c"]

[ext_resource type="Script" path="res://scripts/tool_website_create.gd" id="1_vckyb"]

[node name="ToolWebsiteCreate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vckyb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="WebNameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Website Name"
alignment = 1

[node name="WebUrlLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Web URL"
alignment = 1

[node name="WebIDLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Web ID"
alignment = 1

[node name="WhiteSepContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WhitespaceLineEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/WhiteSepContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Whitespace"
draw_control_chars = true
draw_tabs = true
draw_spaces = true

[node name="SeparatorLineEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/WhiteSepContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Separator"
draw_control_chars = true
draw_tabs = true
draw_spaces = true

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Website Desc"
wrap_mode = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ClearButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="ExportButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Export"

[node name="WebSaveFileDialog" type="FileDialog" parent="."]
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.tres ; Text Resource")
use_native_dialog = true
